   longer arguments to the response object, they now have a defined meaning.
.. Added :attr:`flask.Flask.request_globals_class` to allow a specific class to
   be used on creation of the :data:`~flask.g` instance of each request.
.. Added `required_methods` attribute to view functions to force-add methods
   on registration.
.. Added :func:`flask.after_this_request`.

- :func:`flask.Request.on_json_loading_failed` は、デフォルトでJSONフォーマットのレスポンスを返します。
- :func:`flask.url_for` 関数は、生成済みのリンクに対するアンカーを生成することができます。
- :func:`flask.url_for` 関数は、与えられたHTTPメソッドに固有のURLのルールを明示的に生成することができます。
- ロガーは明示的に設定されていない場合は、デバッグログの設定返します。
- リクエストが途切れたときに、WSGIの環境とリクエストオブジェクトの間の依存関係を解除します。
  これは、レスポンスがWSGIサーバーから返された後、 ``werkzeug.request`` は `None` になるということを意味しています。
  しかし、CPythonではガベージコレクションは必要ないというアドバンテージがあります。
- セッションはコールバックの後に格納されるので、セッションに格納されたセッションの内容はリクエストのコールバック後に修正することができます。
- The :class:`flask.Flask` class will avoid importing the provided import name
  if it can (the required first parameter), to benefit tools which build Flask
  instances programmatically.  The Flask class will fall back to using import
  on systems with custom module hooks, e.g. Google App Engine, or when the
  import name is inside a zip archive (usually a .egg) prior to Python 2.7.
  :class:`flask.Flask` クラスはできる限りインポート名を指定せずにインポートしないようにして下さい。
  (最初のパラメーターは必須です)
  Flaskのインスタンスはプログラム的に生成する
  Flaskクラスは、例としてGoogle App Engineやカスタムモジュールフックで
- Blueprintは、 :meth:`flask.Blueprint.app_template_filter` でアプリケーション
  全体にカスタムテンプレートフィルターを追加するためのデコレーターがあります。
- FlaskとBlueprintクラスは、 :meth:`flask.Flask.add_template_filter` と
  :meth:`flask.Blueprint.add_app_template_filter` でアプリケーション全体に
  カスタムテンプレートフィルターを追加するためのデコレーターではないメソッドを持っています。
- :func:`flask.get_flashed_messages` 関数は ``category_filter`` 引数によって
  フラッシュメッセージにブロックごとにカテゴリレンダリングすることができます。
- :meth:`flask.Flask.run` メソッドは、
  `host` や `port` 引数が `None` の時、デフォルトの値を使うので `None` とすることができます。
  これは設定を使って、例えば、 ``app.run(app.config.get('MYHOST') app.config.get('MYPORT'))``